# Portal

./: .gitignore  PTO_ORG.csv  README.md  robert_jarzemsky_org_visible.csv  start_portal_services.bat
backend/: README.md  __init__.py  environment.yml
backend/app/: __init__.py  api.py
desktop/: README.md
desktop/config/: desktop-config.template.json
desktop/scripts/: build-portable.ps1
docs/: Architecture.pptx  Proactive CCTV Review Report.docx  cctv-review-report-design.md  dashboard-integration.md  management-module-design.md  portal-desktop-application-design.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: AppRoutes.tsx  DashboardLinksPage.tsx  EChart.tsx  HomePage.css  HomePage.tsx  dashboardCatalog.ts  index.css  main.tsx  theme.ts
maintainace/: README.md  config.template.env  manage_database.ps1
maintainace/portal_maintenance/: __init__.py  __main__.py  cli.py
maintenance/: README.md  config.template.env  manage_database.ps1  publish_reference_data.ps1
maintenance/portal_maintenance/: __init__.py  __main__.py  cli.py
python/portal/: README.md  __init__.py  environment.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: business_sync.rs  lib.rs  main.rs
ui/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
ui/src/: AppRoutes.tsx  DashboardLinksPage.css  (+7 more)
workstation-sync/: README.md  open_sync_monitor.vbs  start_sync_hidden.vbs  stop_sync.vbs  sync.settings.template.json  sync_monitor.ps1  sync_portal_sources.py
(+156 files in other folders)
